<resources>
    <string name="app_name">Visit RD</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="visit">Visit</string>
    <string name="share">Share</string>
    <string name="visits">View visits</string>
    <string name="place_name">Place Name</string>
    <string name="place_location">Place Location</string>
    <string name="description_label">Description</string>
    <string name="description">Description</string>
    <string name="comments_label">Comments</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="no_permission">Sorry, the app does not have the permission to access location, enable the permission and try again.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="user_comment">User Comment</string>
    <string name="favorites">Favorites</string>
    <string name="add_comment">Add a comment</string>
</resources>