<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.fragments.PlaceFragment">

    <TextView
        android:id="@+id/tvNameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/place_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLocationP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/place_location"
        android:textAlignment="center" />

    <HorizontalScrollView
        android:id="@+id/svImages"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/llImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RatingBar
                android:id="@+id/rBar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="110dp"
                android:indeterminate="false"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX=".55"
                android:scaleY=".55"
                android:stepSize="0.5"
                android:theme="@style/Widget.AppCompat.RatingBar"
                android:transformPivotX="0dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/description_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/comments_label"
        android:textSize="16sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etComment"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/input_comment"
            android:hint="@string/add_comment"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/ibComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            app:srcCompat="@drawable/ic_send_blue_24dp" />
    </LinearLayout>

</LinearLayout>